--- a/KSPersonalFinance/Podfile
+++ b/KSPersonalFinance/Podfile
@@ -8,7 +8,7 @@ pod 'DGActivityIndicatorView'
 pod 'FSCalendar'
 pod 'VBPieChart', '~> 1.2'
 pod 'NSDate+Calendar'
-pod 'HMSegmentedControl'
+pod 'HSDatePickerViewController', '~> 1.0'
 
 end
 
