--- a/KSPersonalFinance/Podfile
+++ b/KSPersonalFinance/Podfile
@@ -3,10 +3,9 @@ platform :ios, '8.0'
 use_frameworks!
 
 target ‘KSPersonalFinance’ do
-pod ‘MagicalRecord’
+pod 'MagicalRecord'
 pod 'DGActivityIndicatorView'
 pod 'FSCalendar'
-pod 'VBPieChart', '~> 1.2'
 pod 'NSDate+Calendar'
 pod 'HSDatePickerViewController', '~> 1.0'
 pod 'HMSegmentedControl'
